# argo_sonic

./: .gitignore  Hi_Sonic_20260616_213546.onnx  OdomMonitor.py  argo_sonic_nav.py  calibrate_odometry.py  depth_obstacle_test.py  depth_stop.py  frames_2026-06-09_10.42.18.gv  frames_2026-06-09_10.58.22.gv  odom.txt  slam_teleop.py  start_argo_nav.py  start_argo_nav.sh  start_depth_stop.sh  start_neural_planner.sh  start_ntfields_nav.sh  start_restaurant_agent.sh  start_slam.sh  start_slam_explore.sh  train_ntfields.py  ydlidar_obstacle_test.py
src/argo_mini/: calibrate_wheels.py  dashboard.html  esp32_teleop.py  odom_check.py  package.xml  restaurant_agent_node.py  setup.cfg  setup.py
src/argo_mini/argo_mini/: admin_panel.py  argo_teleop.py  dashboard.html  dashboard.py  depth_safety_shield.py  frontier_explorer.py  menu_book.html  ntfields_data_logger.py  ntfields_model.py  ntfields_navigator_node.py  ntfields_offline_train.py  ntfields_planner_node.py  ntfields_social_shield.py  ntfields_speed.py  ntfields_trainer_node.py  pointcloud_restamper.py  pose_setter.py  restaurant_agent_node.py  safety_shield.py  scan_relay.py  serial_bridge.py  slam_teleop.py  teleop_simple.py  voice_agent.py  voice_agent2.py  waypoint_manager.py  waypoint_ui.py
src/argo_mini/config/: exploration_nav2.yaml  nav2.yaml  ntfields.yaml  slam_mapping.yaml  slam_toolbox.yaml
src/argo_mini/firmware/: esp32_motor_controller.ino  esp32_simple.ino
src/argo_mini/launch/: nav.launch.py  ntfields_nav.launch.py  robot_state_publisher.launch.py  slam.launch.py
src/argo_mini/maps/: cafe.pgm  (+17 more)
(+41 files in other folders)
