<?xml version="1.0"?>
<package format="3">
  <name>argo_mini</name>
  <version>1.0.0</version>
  <description>Argo Mini SLAM and Nav2 waypoint navigation</description>
  <maintainer email="argo@argo.bot">Argo</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>numpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
